Implemented myJobs view (Jobs that you requested (posted) and jobs that you are running)
To access myJobs click on the hamburger nav drawer and select "JOBS"

Used viewPager2 so tabs swipe and switch.

Jobs are hardcoded.

Clicking on a Job inside myJobs view will bring you to the Jobs view

Need to change the Jobs view and myJobs view, too confusing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:exported="false"
             android:label="Job Details"
             android:theme="@style/Theme.SFUerrands.NoActionBar" />
+        <activity
+            android:name=".ui.myjobs.MyJobsActivity"
+            android:exported="false"
+            android:label="My Jobs"
+            android:theme="@style/Theme.SFUerrands.NoActionBar"/>
     </application>
 
 </manifest>
