Implemented CREATE JOB
In requests tab top right implemented a 'create job' button.

Clicking it brings up the 'create job' view and the user can enter these:
Title (text)
Description (multiline text)
Campus (text input)
Price Offered (numeric input)

Right now it just prints to logcat, so open logcat then filter by 'createjobactivity' and you'll see the logs.

TODO: Link it up to database so creating a new job inserts into the DB table

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
             android:exported="false"
             android:label="Settings"
             android:theme="@style/Theme.SFUerrands.NoActionBar"/>
+        <activity
+            android:name=".ui.myjobs.CreateJobActivity"
+            android:exported="false"
+            android:label="Create Job"
+            android:parentActivityName=".ui.myjobs.MyJobsActivity"
+            android:theme="@style/Theme.SFUerrands.NoActionBar"/>
     </application>
 
 </manifest>
