--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:exported="false"
             android:label="Settings"
             android:theme="@style/Theme.SFUerrands.NoActionBar"/>
+        <activity android:name=".ui.auth.LoginActivity"
+            android:exported="false"
+            android:label="Authenticate"
+            android:theme="@style/Theme.SFUerrands.NoActionBar"/>
     </application>
 
 </manifest>
