--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:theme="@style/Theme.SFUerrands.NoActionBar"/>
         <activity android:name=".ui.auth.VerifyEmailActivity"
             android:exported="false"
-            android:label="Verify Email"
+            android:label="Verify Email"/>
         <activity
             android:name=".ui.myjobs.CreateJobActivity"
             android:exported="false"
