Implemented Task list #25

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,12 @@
             android:name=".ui.myjobs.EditJobActivity"
             android:parentActivityName=".ui.myjobs.MyJobsActivity"
             android:theme="@style/Theme.SFUerrands.NoActionBar" />
+        <activity
+            android:name=".ui.myjobs.TaskDetailActivity"
+            android:exported="false"
+            android:label="Task Details"
+            android:parentActivityName=".ui.myjobs.MyJobsActivity"
+            android:theme="@style/Theme.SFUerrands.NoActionBar" />
     </application>
 
 </manifest>
